openshift-manifests/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubevirt-velero-annotations-remover
  namespace: openshift-adp
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: webhook-tls
spec:
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app: kubevirt-velero-annotations-remover
